--- a/senpick/app/templates/pswd_verif.html
+++ b/senpick/app/templates/pswd_verif.html
@@ -41,7 +41,7 @@
             </div>
           <div class="verif-timer-group">
             <div id="timer-text">00:00</div>
-            <div id="resend-text" style="display: none;">인증코드 재전송</div>
+            <div id="resend-text">인증코드 재전송</div>
           </div>
           <div id="verif-error-msg" class="error-message"></div>
           <button class="verif-comp-btn">이메일 인증 완료</button>
