--- a/senpick/static/css/style.css
+++ b/senpick/static/css/style.css
@@ -100,6 +100,7 @@ button {
 
 .image-wrapper img {
   width: 100%;
+  height: 130px;
   display: block;
 }
 
@@ -111,6 +112,11 @@ button {
   font-size: 14px;
   color: #999;
   margin-bottom: 2px;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .product-card .title {
