--- a/senpick/app/templates/login.html
+++ b/senpick/app/templates/login.html
@@ -26,7 +26,7 @@
             <h2 class="main-title">어떤 선물을 해야할 지 고민이신가요?</h2>
             <p class="sub-title">센스의 정답 센픽, 모든 순간엔 센픽하세요.</p>
           </div>
-          <form method="post" action="{% url 'login' %}" class="login-form" novalidate>
+          <form id="loginForm" method="post" action="{% url 'login' %}" class="login-form" novalidate>
             {% csrf_token %}
             <div class="input-group"  id="email-group">
               <input type="email" name="username" id="email" placeholder="이메일 입력" required>
