fix product url

--- a/senpick/app/templates/chat_detail.html
+++ b/senpick/app/templates/chat_detail.html
@@ -30,7 +30,7 @@
                 <div class="card-wrapper">
                   {% for product in msg.products %}
                     <div class="product-card">
-                      <a href="{{ product.product_url }}" target="_blank">
+                      <a href="{{ product.link }}" target="_blank">
                         <div class="image-wrapper">
                           <img src="{{ product.imageUrl }}" alt="{{ product.title }}">
                         </div>
