--- a/senpick/app/templates/profile/profile_delete.html
+++ b/senpick/app/templates/profile/profile_delete.html
@@ -87,7 +87,7 @@
       </div>
     </div>
   </div>
-
+  <script src="{% static 'js/script.js' %}"></script>
   <script>
     function goToStep(stepNumber) {
       const steps = document.querySelectorAll('.step');
