--- a/senpick/app/templates/profile/profile_info.html
+++ b/senpick/app/templates/profile/profile_info.html
@@ -100,6 +100,7 @@
       </div>
     </div>
   </div>
+  <script src="{% static 'js/script.js' %}"></script>
   <script src="{% static 'js/profile_info.js' %}"></script>
   <script>
     // 성별 선택
