--- a/senpick/app/templates/profile/profile_password.html
+++ b/senpick/app/templates/profile/profile_password.html
@@ -62,7 +62,7 @@
       </div>
     </div>
   </div>
-
+  <script src="{% static 'js/script.js' %}"></script>
   <script>
     document.querySelector("form").onsubmit = function (e) {
 
