마이페이지 반응형 삭제

--- a/senpick/app/templates/mypage.html
+++ b/senpick/app/templates/mypage.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cafe24+Supermagic&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div style="display: flex;" class="layout">
+  <div class="layout">
     {% include 'layout/sidebar.html' %}
 
     <div class="mypage-container">
