pswd sidebar feat

--- a/senpick/app/templates/layout/sidebar.html
+++ b/senpick/app/templates/layout/sidebar.html
@@ -19,7 +19,7 @@
       <img src="{% static 'images/plus.svg' %}" alt="새 채팅">
       <span class="btn-label">New Chat</span>
     </div>
-    <div class="menu-btn-row selected" id="chat-btn" cursor="default;">
+    <div class="menu-btn-row selected" id="chat-btn">
       <img src="{% static 'images/chat_logo.png' %}" alt="Chat">
       <span class="btn-label">Chat</span>
     </div>
