--- a/senpick/static/css/login.css
+++ b/senpick/static/css/login.css
@@ -45,6 +45,7 @@ html, body {
   margin: 20px 20px 10px;
   height: 30px;
   display: block;
+  cursor: pointer;
   /* box-sizing: content-box;
   padding: 25px;
   height: 42px;
