--- a/senpick/app/templates/profile/profile_info.html
+++ b/senpick/app/templates/profile/profile_info.html
@@ -36,7 +36,8 @@
                     <input type="file" name="profile_image" accept="image/*" style="display:none;" form="profile-form" id="profileImage">
                     <button type="button" id="changeImage">사진 바꾸기</button>
                   </label>
-                  <button class="delete-btn" type="submit" form="profile-form" name="delete_image" value="1">사진 삭제</button>
+                  <input type="hidden" name="delete_image" value="0" id="deleteImageInput" form="profile-form">
+                  <button class="delete-btn" id="deleteImage">사진 삭제</button>
                 </div>
                 <p class="profile-img-note">※ 5MB 이내의 jpg, png 형식 파일만 가능합니다.</p>
               </div>
@@ -47,15 +48,15 @@
             <form method="POST" action="/mypage/profile/" enctype="multipart/form-data" id="profile-form" novalidate>
               {% csrf_token %}
 
-              {% comment %} {% if error %}
-                <p style="color: #EB1C24; margin-bottom:10px;">{{ error }}</p>
-              {% endif %} {% endcomment %}
-
               <label for="email">이메일</label>
               <input id="email" type="email" name="email" value="{{ user.email }}" readonly>
 
               <label for="password">비밀번호 확인</label>
               <input id="password" type="password" name="password" placeholder="비밀번호 입력" required>
+
+              {% if error %}
+                <p class="error-message" style="display:block;">{{ error }}</p>
+              {% endif %}
 
               <label for="nickname">닉네임</label>
               <input id="nickname" type="text" name="nickname" value="{{ user.nickname }}">
@@ -167,6 +168,14 @@
         newFilename.textContent = profileImage.files[0] ? "업로드 이미지 : " + profileImage.files[0].name : "선택된 파일 없음";
         const profileImageButtons = document.querySelector(".profile-image-buttons");
         profileImageButtons.appendChild(newFilename);
+      }
+    });
+    deleteImage.addEventListener("click", function() {
+      if (confirm("정말로 프로필 사진을 삭제하시겠습니까?")) {
+        profileImage.value = ""; // 파일 입력 초기화
+        const profileImageElement = document.querySelector(".profile-image img");
+        profileImageElement.src = "{% static 'images/member_default_image.png' %}"; // 기본 이미지로 변경
+        deleteImageInput.value = "1"; // 삭제 플래그 설정
       }
     });
     
