--- a/senpick/app/templates/profile/profile_password.html
+++ b/senpick/app/templates/profile/profile_password.html
@@ -172,8 +172,9 @@
         return response.json();
       })
       .then(data => {
-        // alert("현재 비밀번호가 확인되었습니다.");
+        alert("현재 비밀번호가 확인되었습니다.");
         // currentPassword.disabled = true;
+        currentPassword.readOnly = true;
         checkButton.disabled = true;
         checkButton.style.opacity = '0.5';
         checkButton.style.cursor = 'not-allowed';
