fix job error msg position

--- a/senpick/app/templates/profile/profile_info.html
+++ b/senpick/app/templates/profile/profile_info.html
@@ -79,6 +79,7 @@
                 <input id="job" type="text" name="job" value="{{ user.job }}" spellcheck="false">
                 <img src="{% static 'images/bottom_arrow.svg' %}" alt="드롭다운 화살표">
               </div>
+              <div id="jobError" class="error-message"></div>
 
               <label>선호 스타일 <span class="hint">(최대 3개 선택)</span></label>
               <div class="preference-tags style-tags">
