--- a/senpick/app/templates/chat_detail.html
+++ b/senpick/app/templates/chat_detail.html
@@ -25,7 +25,7 @@
             {% if msg.sender == 'user' %}
               <div class="chat-msg user">{{ msg.message }}</div>
             {% else %}
-              <div class="chat-msg bot">{{ msg.message }}</div>
+              <div class="chat-msg bot">{{ msg.message|safe }}</div>
               {% if msg.products %}
                 <div class="card-wrapper">
                   {% for product in msg.products %}
