--- a/senpick/static/css/chat.css
+++ b/senpick/static/css/chat.css
@@ -194,7 +194,7 @@ body {
   width:fit-content;
   height: 44px;
   display: inline-block;
-  /* padding: 8px 15px; */
+  padding: 8px 15px;
   font-size: 14px;
   cursor: pointer;
 }
