--- a/senpick/app/templates/chat_detail.html
+++ b/senpick/app/templates/chat_detail.html
@@ -18,7 +18,7 @@
     <div class="main-content">
       <div class="chatbot-body">
         <div class="chat-window" id="chat-history">
-          <div class="chat-msg user">
+          <div class="chat-msg user" style="white-space: nowrap;">
             🎁 {{ recipient_info.gender }} / {{ recipient_info.age_group }} / {{ recipient_info.relation }} / {{ recipient_info.anniversary }}
           </div>
           {% for msg in messages %}
